# soundseeker

./: .gitignore  README.md
debug_frontend/: frontend.py  serial_data_fetch.py
docs/: Dockerfile  README.md  build.sh  config.toml  docker-compose.yml  nginx.default.conf  package-lock.json  package.json  setup.sh  update.sh
firmware/: CMakeLists.txt  README.md
firmware/src/: main.c  main.h  parallel_nand.pio  r2r_ladder.pio  soundseeker.h  sync_functions.c  sync_functions.h  tusb_config.h  usb_descriptors.c
firmware/src/nand/: nand_thread.c
firmware/src/pwm/: pwm.c  pwm.h
firmware/src/signal_generator/: r2r_ladder.pio  signal_generator.c  signal_generator.h
firmware/src/usb/: usb_device_handler.c  usb_device_handler.h  usb_status_blink.c  usb_status_blink.h  usb_thread.c
ki_cad/piezo_sensor_amplifier/: fp-info-cache  fp-lib-table  piezo_sensor_amplifier.kicad_pcb  piezo_sensor_amplifier.kicad_prl  piezo_sensor_amplifier.kicad_pro  piezo_sensor_amplifier.kicad_sch  sym-lib-table
ki_cad/piezo_sensor_amplifier/gerbers/: piezo_sensor_amplifier-B_Cu.gbr  piezo_sensor_amplifier-B_Mask.gbr  piezo_sensor_amplifier-B_Paste.gbr  piezo_sensor_amplifier-B_Silkscreen.gbr  piezo_sensor_amplifier-Edge_Cuts.gbr  piezo_sensor_amplifier-F_Cu.gbr  piezo_sensor_amplifier-F_Mask.gbr  piezo_sensor_amplifier-F_Paste.gbr  piezo_sensor_amplifier-F_Silkscreen.gbr  piezo_sensor_amplifier-NPTH.drl  piezo_sensor_amplifier-PTH.drl  piezo_sensor_amplifier-job.gbrjob
ki_cad/piezo_sensor_amplifier/preamp_footprints.pretty/: piezo_sensor_D25mm.kicad_mod
ki_cad/soundseeker/: _autosave-sensor_signal_conditioning.kicad_sch  fp-info-cache  fp-lib-table  high_voltage_power_supply.kicad_sch  piezo_driver.kicad_sch  piezo_preamp.kicad_sym  sensor_signal_conditioning.kicad_sch  soundseeker.csv  soundseeker.kicad_pcb  soundseeker.kicad_prl  soundseeker.kicad_pro  soundseeker.kicad_sch  soundseeker.kicad_sym  soundseeker.xml  sym-lib-table
ki_cad/soundseeker/gerbers/: soundseeker-B_Cu.gbr  soundseeker-B_Mask.gbr  soundseeker-B_Paste.gbr  soundseeker-B_Silkscreen.gbr  (+8 more)
scripts/: MCP1652_calculator.py
(+9 files in other folders)
